[f471174bfccb75b3a9bbf882288cabc50816fd2a]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2631,8 +2631,8 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:</p>
 </table>
 
 <blockquote>
-  <p>Todos os valores financeiros são informados sem vírgula, ou seja 2500 são equivalentes a R$ 25,00. Os outros objetos possuem documentação própria que 
-pode ser visualizada pelo Android Studio quando a classe é declarada.</p>
+  <p>Todos os valores financeiros são informados sem vírgula, ou seja 2500 são equivalentes a R$ 25,00. 
+Os outros objetos - como <code class="highlighter-rouge">Order</code> e <code class="highlighter-rouge">Payment</code> possuem documentação própria que pode ser visualizada pelo Android Studio quando a classe é declarada.</p>
 </blockquote>
 
 <table>
@@ -2640,6 +2640,10 @@ pode ser visualizada pelo Android Studio quando a classe é declarada.</p>
     <tr>
       <th>Lista de Tipos de Captura</th>
       <th> </th>
+    </tr>
+    <tr>
+      <th>Código</th>
+      <th>Valor</th>
     </tr>
   </thead>
   <tbody>
@@ -2667,6 +2671,10 @@ pode ser visualizada pelo Android Studio quando a classe é declarada.</p>
     <tr>
       <th>Lista de Tipos de Transação</th>
       <th> </th>
+    </tr>
+    <tr>
+      <th>Código</th>
+      <th>Valor</th>
     </tr>
   </thead>
   <tbody>
