[3dc9b1df4c420c7c6b91a1c2b724180268bf4bb4]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2632,7 +2632,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:</p>
 
 <blockquote>
   <p>Todos os valores financeiros são informados sem vírgula, ou seja 2500 são equivalentes a R$ 25,00. 
-Os outros objetos - como <code class="highlighter-rouge">Order</code> e <code class="highlighter-rouge">Payment</code> possuem documentação própria que pode ser visualizada pelo Android Studio quando a classe é declarada.</p>
+Os outros objetos - como <code class="highlighter-rouge">Order</code> e <code class="highlighter-rouge">Payment</code> - possuem documentação própria que pode ser visualizada pelo Android Studio quando a classe é declarada.</p>
 </blockquote>
 
 <table>
