[05e067781509d04e0a4893c2417c27edc26e2629]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2299,12 +2299,12 @@ Identificação do token de acesso, que armazena as regras de acesso permitidas 
     <tr>
       <td>credentials</td>
       <td>Credenciais de acesso do Parceiro/Desenvolvedor. Depois de se registrar no Portal de Desenvolvedores e criar seu app, o Parceiro/Desenvolvedor recebe as credenciais (Client-Id e Access-Token). Elas servem para identificá-lo unicamente na plataforma LIO e diferenciar as ordens da sua aplicação.</td>
-      <td>cielo.sdk.order.Credentials</td>
+      <td><code class="highlighter-rouge">cielo.sdk.order.Credentials</code></td>
     </tr>
     <tr>
       <td>context</td>
-      <td>O contexto da aplicação</td>
-      <td>android.content.Context</td>
+      <td>O contexto da aplicação.</td>
+      <td><code class="highlighter-rouge">android.content.Context</code></td>
     </tr>
   </tbody>
 </table>
@@ -2741,12 +2741,12 @@ Os outros objetos - como <code class="highlighter-rouge">Order</code> e <code cl
     <tr>
       <td>orderId</td>
       <td>O identificador do pedido a ser pago.</td>
-      <td>String</td>
+      <td><code class="highlighter-rouge">String</code></td>
     </tr>
     <tr>
       <td>paymentListener</td>
       <td>Callback de pagamento.</td>
-      <td>cielo.sdk.order.payment.PaymentListener</td>
+      <td><code class="highlighter-rouge">cielo.sdk.order.payment.PaymentListener</code></td>
     </tr>
   </tbody>
 </table>
@@ -2776,17 +2776,17 @@ Os outros objetos - como <code class="highlighter-rouge">Order</code> e <code cl
     <tr>
       <td>orderId</td>
       <td>O identificador do pedido a ser pago.</td>
-      <td>String</td>
+      <td><code class="highlighter-rouge">String</code></td>
     </tr>
     <tr>
       <td>value</td>
       <td>Valor a ser pago. R$ 10,00 deve ser enviado como 1000.</td>
-      <td>Long</td>
+      <td><code class="highlighter-rouge">Long</code></td>
     </tr>
     <tr>
       <td>paymentListener</td>
       <td>Callback de pagamento.</td>
-      <td>cielo.sdk.order.payment.PaymentListener</td>
+      <td><code class="highlighter-rouge">cielo.sdk.order.payment.PaymentListener</code></td>
     </tr>
   </tbody>
 </table>
