[b24702e96e40db381146e94830bf87c79d3701a9]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3208,47 +3208,47 @@ As seguintes ações pode ser notificadas:
   </thead>
   <tbody>
     <tr>
-      <td>PrinterManager.KEY_ALIGN</td>
+      <td><code class="highlighter-rouge">PrinterAttributes.KEY_ALIGN</code></td>
       <td>Alinhamento da impressão</td>
-      <td>PrinterManager.VAL_ALIGN_CENTER  PrinterManager.VAL_ALIGN_LEFT PrinterManager.VAL_ALIGN_RIGHT</td>
+      <td><code class="highlighter-rouge">PrinterAttributes.VAL_ALIGN_CENTER</code>  <code class="highlighter-rouge">PrinterAttributes.VAL_ALIGN_LEFT</code> <code class="highlighter-rouge">PrinterAttributes.VAL_ALIGN_RIGHT</code></td>
     </tr>
     <tr>
-      <td>PrinterManager.KEY_TEXTSIZE</td>
+      <td><code class="highlighter-rouge">PrinterAttributes.KEY_TEXTSIZE</code></td>
       <td>Tamanho do texto</td>
       <td>Valores inteiros</td>
     </tr>
     <tr>
-      <td>PrinterManager.KEY_TYPEFACE</td>
+      <td><code class="highlighter-rouge">PrinterAttributes.KEY_TYPEFACE</code></td>
       <td>Fonte do texto</td>
       <td>Trabalha com um inteiro de 0 a 8, onde cada um é uma fonte diferente.</td>
     </tr>
     <tr>
-      <td>PrinterManager.KEY_MARGINLEFT</td>
+      <td><code class="highlighter-rouge">PrinterAttributes.KEY_MARGINLEFT</code></td>
       <td>Margem esquerda</td>
       <td>Valores inteiros</td>
     </tr>
     <tr>
-      <td>PrinterManager.KEY_MARGINRIGHT</td>
+      <td><code class="highlighter-rouge">PrinterAttributes.KEY_MARGINRIGHT</code></td>
       <td>Margem direia</td>
       <td>Valores inteiros</td>
     </tr>
     <tr>
-      <td>PrinterManager.KEY_MARGINTOP</td>
+      <td><code class="highlighter-rouge">PrinterAttributes.KEY_MARGINTOP</code></td>
       <td>Margem superior</td>
       <td>Valores inteiros</td>
     </tr>
     <tr>
-      <td>PrinterManager.KEY_MARGINBOTTOM</td>
+      <td><code class="highlighter-rouge">PrinterAttributes.KEY_MARGINBOTTOM</code></td>
       <td>Margem inferior</td>
       <td>Valores inteiros</td>
     </tr>
     <tr>
-      <td>PrinterManager.KEY_LINESPACE</td>
+      <td><code class="highlighter-rouge">PrinterAttributes.KEY_LINESPACE</code></td>
       <td>Espaçamento entre as linhas</td>
       <td>Valores inteiros</td>
     </tr>
     <tr>
-      <td>PrinterManager.KEY_WEIGHT</td>
+      <td><code class="highlighter-rouge">PrinterAttributes.KEY_WEIGHT</code></td>
       <td>Varíavel utilizada quando se trbaalho com impressão de múltiplas colunas, para escolher o peso de cada coluna</td>
       <td>Valores inteiros</td>
     </tr>
