[8ed7061a01cce83f2350943041178d6742a9dd1b]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3185,15 +3185,7 @@ Utilize o método abaixo para finalizar o uso do OrderManager:</p>
 
 <p><code class="highlighter-rouge">infoManager.getDeviceModel();</code></p>
 
-<table>
-  <tbody>
-    <tr>
-      <td>O mesmo irá retornar um enum do tipo <code class="highlighter-rouge">DeviceModel</code> com o modelo correspondente (<code class="highlighter-rouge">LIO_V1</code></td>
-      <td> </td>
-      <td><code class="highlighter-rouge">LIO_V2</code> ).</td>
-    </tr>
-  </tbody>
-</table>
+<p>O mesmo irá retornar um enum do tipo <code class="highlighter-rouge">DeviceModel</code> com o modelo correspondente (<code class="highlighter-rouge">LIO_V1</code> ou <code class="highlighter-rouge">LIO_V2</code> ).</p>
 
 <h3 id="obtendo-informações-do-usuário-ec-e-número-lógico">Obtendo informações do usuário (EC e Número Lógico)</h3>
 
