[065f6755b5e600d0f116b30b92337423ec2276f1]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2530,7 +2530,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:</p>
     <tr>
       <td>v40Code</td>
       <td>Tipo da transação</td>
-      <td>5 (Lista de Tipos de transação)</td>
+      <td>5 (Lista de Tipos de transação abaixo)</td>
     </tr>
     <tr>
       <td>secondaryProductName</td>
@@ -2605,7 +2605,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:</p>
     <tr>
       <td>cardCaptureType</td>
       <td>Código do tipo de captura do cartão</td>
-      <td>0 (Lista de Tipos de Captura)</td>
+      <td>0 (Lista de Tipos de Captura abaixo)</td>
     </tr>
     <tr>
       <td>requestDate</td>
@@ -2669,7 +2669,7 @@ Os outros objetos - como <code class="highlighter-rouge">Order</code> e <code cl
 <table>
   <thead>
     <tr>
-      <th>Lista de Tipos de Transação</th>
+      <th>Lista de Tipos de Transação - (Isto não é válido como código primário)</th>
       <th> </th>
     </tr>
     <tr>
