[7fb0dc664b293a81212dcda285a48095a128b613]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3340,7 +3340,7 @@ printerManager.printText(textToPrint, alignLeft, printerListener);
 </code></pre></div></div>
 
 <p>Resultado final da impressão
-<img src="https://developercielo.github.io/images/cielo-lio/print-text.png" alt="Impressão Texto Simples" /></p>
+<img src="https://developercielo.github.io/images/cielo-lio/print-text.png | width=100" alt="Impressão Texto Simples" /></p>
 
 <table>
   <thead>
@@ -3386,7 +3386,7 @@ printerManager.printMultipleColumnText(textsToPrint, stylesMap, printerListener)
 </code></pre></div></div>
 
 <p>Resultado final da impressão
-<img src="https://developercielo.github.io/images/cielo-lio/print-columns.png" alt="Impressão Múltiplas Colunas" /></p>
+<img src="https://developercielo.github.io/images/cielo-lio/print-columns.png | width=100" alt="Impressão Múltiplas Colunas" /></p>
 
 <table>
   <thead>
@@ -3429,12 +3429,16 @@ printerManager.printImage(bitmap, alignCenter, printerListener);
     <tr>
       <th>Imagem a ser impressa</th>
       <th>Resultado final</th>
+      <th> </th>
+      <th> </th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td><img src="https://developercielo.github.io/images/cielo-lio/cielo.png" alt="Impressão Imagem" /></td>
-      <td><img src="https://developercielo.github.io/images/cielo-lio/print-image.png" alt="Impressão Imagem" /></td>
+      <td>![Impressão Imagem](https://developercielo.github.io/images/cielo-lio/cielo.png</td>
+      <td>width=100)</td>
+      <td>![Impressão Imagem](https://developercielo.github.io/images/cielo-lio/print-image.png</td>
+      <td>width=100)</td>
     </tr>
   </tbody>
 </table>
