--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3339,8 +3339,7 @@ O método recebe como parâmetro o texto a ser impresso, um mapa de estilo de im
 printerManager.printText(textToPrint, alignLeft, printerListener);
 </code></pre></div></div>
 
-<p>Resultado final da impressão
-<img src="https://developercielo.github.io/images/cielo-lio/print-text.png | width=100" alt="Impressão Texto Simples" /></p>
+<p>Resultado final da impressão</p>
 
 <table>
   <thead>
