[87fac18003e5ae7013f779b3c7358a59bd09ee09]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3339,7 +3339,8 @@ O método recebe como parâmetro o texto a ser impresso, um mapa de estilo de im
 printerManager.printText(textToPrint, alignLeft, printerListener);
 </code></pre></div></div>
 
-<p>Resultado final da impressão</p>
+<p>Resultado final da impressão
+<img src="https://developercielo.github.io/images/cielo-lio/print-text.png" alt="Impressão texto simples" height="50%" width="50%" /></p>
 
 <table>
   <thead>
