[126f48364facad0d4f26c6954f44b8c2d3b59570]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3339,7 +3339,7 @@ O método recebe como parâmetro o texto a ser impresso, um mapa de estilo de im
 printerManager.printText(textToPrint, alignLeft, printerListener);
 </code></pre></div></div>
 
-<p>Resultado final da impressão
+<p>Exemplo de impressão de texto simples:
 <img src="https://developercielo.github.io/images/cielo-lio/print-text.png" alt="Impressão texto simples" height="50%" width="50%" /></p>
 
 <table>
@@ -3385,8 +3385,8 @@ printerManager.printMultipleColumnText(textsToPrint, stylesMap, printerListener)
 
 </code></pre></div></div>
 
-<p>Resultado final da impressão
-<img src="https://developercielo.github.io/images/cielo-lio/print-columns.png | width=100" alt="Impressão Múltiplas Colunas" /></p>
+<p>Resultado final da impressão:
+<img src="https://developercielo.github.io/images/cielo-lio/print-columns.png" alt="Impressão Múltiplas Colunas" height="50%" width="50%" /></p>
 
 <table>
   <thead>
@@ -3429,16 +3429,12 @@ printerManager.printImage(bitmap, alignCenter, printerListener);
     <tr>
       <th>Imagem a ser impressa</th>
       <th>Resultado final</th>
-      <th> </th>
-      <th> </th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>![Impressão Imagem](https://developercielo.github.io/images/cielo-lio/cielo.png</td>
-      <td>width=100)</td>
-      <td>![Impressão Imagem](https://developercielo.github.io/images/cielo-lio/print-image.png</td>
-      <td>width=100)</td>
+      <td><img src="https://developercielo.github.io/images/cielo-lio/cielo.png" alt="Impressão Imagem" height="50%" width="50%" /></td>
+      <td><img src="https://developercielo.github.io/images/cielo-lio/print-image.png" alt="Impressão Imagem" height="50%" width="50%" /></td>
     </tr>
   </tbody>
 </table>
