--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3405,7 +3405,7 @@ printerManager.printMultipleColumnText(textsToPrint, stylesMap, printerListener)
     <tr>
       <td>style</td>
       <td>Lista de mapa de estilos de impressão</td>
-      <td><code class="highlighter-rouge">List&gt;</code></td>
+      <td><code class="highlighter-rouge">List Map</code></td>
     </tr>
     <tr>
       <td>printerListener</td>
