[d1e4dc1b9913631f299d5e233ffeb4164b8eeb97]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3405,7 +3405,7 @@ printerManager.printMultipleColumnText(textsToPrint, stylesMap, printerListener)
     <tr>
       <td>style</td>
       <td>Lista de mapa de estilos de impressão</td>
-      <td><code class="highlighter-rouge">List Map</code></td>
+      <td><code class="highlighter-rouge">List - Map - (String, Int) </code></td>
     </tr>
     <tr>
       <td>printerListener</td>
