[fb4507cad22540330b41dfeda3354ad439209c74]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2838,7 +2838,7 @@ Os outros objetos - como <code class="highlighter-rouge">Order</code> e <code cl
     <tr>
       <td>secondaryProducts</td>
       <td>Listagem de códigos de pagamento secundário. ex.: À Vista, Parcelado, etc.</td>
-      <td><code class="highlighter-rouge">ArrayList</code></td>
+      <td><code class="highlighter-rouge">ArrayList&gt;</code></td>
     </tr>
   </tbody>
 </table>
