[cb06964a06275f0c5a6bc67304d72dd166d9a859]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2445,7 +2445,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:</p>
 <table>
   <thead>
     <tr>
-      <th>Payment Fields (atributo do objeto Payment)</th>
+      <th>Payment Fields  - (<strong>atributo do objeto Payment</strong>)</th>
       <th> </th>
       <th> </th>
     </tr>
