[151ef8af86971e91cd135a60d02eac9e5b7329d3]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3217,7 +3217,9 @@ Para isso, basta utilizar a função abaixo, que retorna os pedidos de forma pag
   </tbody>
 </table>
 
-<p>O objeto ResultOrders contém uma lista com todas as ordens abertas assinadas com as credenciais da aplicação.</p>
+<blockquote>
+  <p>O objeto ResultOrders contém uma lista com todas as ordens abertas assinadas com as credenciais da aplicação.</p>
+</blockquote>
 
 <h2 id="finalizar-uso-do-ordermanager">Finalizar uso do OrderManager</h2>
 
