[ad4c1b4d74bd7f60bf4f3f8d8d984f7e705a4328]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -404,7 +404,7 @@
 
 <p>O passo a passo para a instalação do Certificado EV deverá ser contatado o suporte do fornecedor do seu servidor.</p>
 
-<aside class="warning">*A Cielo não oferece suporte para a instalação do Certificado.*</aside>
+<aside class="warning">A Cielo não oferece suporte para a instalação do Certificado.</aside>
 
 <h3 id="acesso-do-cliente-à-loja-virtual">Acesso do Cliente à Loja Virtual</h3>
 
