[fe8c648b6ee554122b544b27d824f6dd495a0b90]: Update 2015-03-25-webservice-1.5.md

--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -2186,7 +2186,7 @@ mensagem=<span class="cp">&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;</spa
     <tr>
       <td>98</td>
       <td>Timeout</td>
-      <td>A aplicação não respondeu dentro de 25 segundos.</td>
+      <td>A aplicação não respondeu dentro do tempo esperado.</td>
       <td>Consultar a transação e avaliar o status antes de submeter a transação. Persistindo, entrar em contato com o Suporte.</td>
     </tr>
     <tr>
@@ -2198,7 +2198,7 @@ mensagem=<span class="cp">&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;</spa
     <tr>
       <td>475</td>
       <td>Timeout de Cancelamento</td>
-      <td>A aplicação não respondeu dentro de 25 segundos.</td>
+      <td>A aplicação não respondeu dentro do tempo esperado.</td>
       <td>Realizar uma nova tentativa após alguns segundos. Persistindo, entrar em contato com o Suporte.</td>
     </tr>
   </tbody>
