[b079438ca63f881659c8ad0458498d688ee6e208]: Update 2015-03-25-webservice-1.5.md

--- a/en/manual/webservice-1-5.html
+++ b/en/manual/webservice-1-5.html
@@ -1597,7 +1597,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
     <tr>
       <td>475</td>
       <td>Cancellation Timeout</td>
-      <td>The application did not answer within 25 seconds.</td>
+      <td>The application did not answer within expeted time.</td>
       <td>Try again after a few seconds. If the error persists, contact the shop.</td>
       <td>Yes.</td>
       <td> </td>
