[18321947cd5844e4fe239a3cc6359e2057c1da30]: Merge pull request #45 from alefesouza/docs
Use Gulp for front-end stuff

--- a/404.html
+++ b/404.html
@@ -19,19 +19,10 @@
     <link rel="shortcut icon" href="https://developercielo.github.io/assets/favicon.ico">
 
     <!-- CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
     <script async src="https://use.fontawesome.com/3ae06f1030.js"></script>
 
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/poole.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/syntax.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/hyde.css">
-
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/bootstrap.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/jquery.tocify.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/jquery-ui.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/prettify.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/custom.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/cielo.css">
+    <link rel="stylesheet" href="https://developercielo.github.io/assets/bundles/css/bundle.min.css">
 
     
         
@@ -206,7 +197,7 @@
 
     <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
         <h2>Precisa de ajuda?</h2>
-        <p>Se você não conseguiu encontrar sua resposta acima, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/ajuda-portal">entre em contato conosco</a>.</p>
+        <p>Se você não conseguiu encontrar sua resposta acima, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte">entre em contato conosco</a>.</p>
     </div>
 </div>
 
