--- a/en/404.html
+++ b/en/404.html
@@ -19,19 +19,10 @@
     <link rel="shortcut icon" href="https://developercielo.github.io/en/assets/favicon.ico">
 
     <!-- CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
     <script async src="https://use.fontawesome.com/3ae06f1030.js"></script>
 
-    <link rel="stylesheet" href="https://developercielo.github.io/en/assets/css/poole.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/en/assets/css/syntax.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/en/assets/css/hyde.css">
-
-    <link rel="stylesheet" href="https://developercielo.github.io/en/assets/css/bootstrap.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/en/assets/css/jquery.tocify.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/en/assets/css/jquery-ui.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/en/assets/css/prettify.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/en/assets/css/custom.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/en/assets/css/cielo.css">
+    <link rel="stylesheet" href="https://developercielo.github.io/en/assets/bundles/css/bundle.min.css">
 
     
         
@@ -152,7 +143,7 @@
 
     <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
         <h2>Need Help?</h2>
-        <p>If you didn't find your answer, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/ajuda-portal">send us a message</a>.</p>
+        <p>If you didn't find your answer, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte">send us a message</a>.</p>
     </div>
 </div>
 
