--- a/index.html
+++ b/index.html
@@ -19,19 +19,10 @@
     <link rel="shortcut icon" href="https://developercielo.github.io/assets/favicon.ico">
 
     <!-- CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
     <script async src="https://use.fontawesome.com/3ae06f1030.js"></script>
 
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/poole.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/syntax.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/hyde.css">
-
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/bootstrap.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/jquery.tocify.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/jquery-ui.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/prettify.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/custom.css">
-    <link rel="stylesheet" href="https://developercielo.github.io/assets/css/cielo.css">
+    <link rel="stylesheet" href="https://developercielo.github.io/assets/bundles/css/bundle.min.css">
 
     
         
