[697f3e83809b97cea27da45741778529de926e4c]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -8467,7 +8467,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ServiceTaxAmount</code></td>
-      <td><a href="https://developercielo.github.io/Webservice-3.0/#anexos">Veja Anexo</a></td>
+      <td><a href="https://developercielo.github.io/manual/cielo-ecommerce#service-tax-amount-taxa-de-embarque">Veja Anexo</a></td>
       <td>Número</td>
       <td>15</td>
       <td>Não</td>
@@ -8629,7 +8629,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ServiceTaxAmount</code></td>
-      <td><a href="https://developercielo.github.io/Webservice-3.0/#anexos">Veja Anexo</a></td>
+      <td><a href="https://developercielo.github.io/manual/cielo-ecommerce#service-tax-amount-taxa-de-embarque">Veja Anexo</a></td>
       <td>Número</td>
       <td>15</td>
       <td>Não</td>
