--- a/en/index.html
+++ b/en/index.html
@@ -94,6 +94,11 @@
                 </li>
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/en/manual/cielo-ecommerce2">Manual de Integração</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/en/tutorial/sdks-cielo">SDKs</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
