[7ecb5c42fbd658d990e012500154628e50a2ee3c]: Updated '_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce2.md' via CloudCannon

--- a/en/manual/cielo-ecommerce2.html
+++ b/en/manual/cielo-ecommerce2.html
@@ -4555,7 +4555,7 @@ Abaixo especificamos qualquer diferença existente:</p>
 
 <h1 id="consulta---captura---cancelamento">Consulta - Captura - Cancelamento</h1>
 
-<h2 id="consulta-de-transções">Consulta de transções</h2>
+<h2 id="consulta-de-transações">Consulta de transações</h2>
 
 <h3 id="consulta---paymentid">Consulta - PaymentID</h3>
 
@@ -8438,7 +8438,7 @@ HTTP Status 200
 
 <p>Para alterar a data do próximo Pagamento, basta fazer um Put conforme o exemplo.</p>
 
-<h3 id="requisição-20">Requisição</h3>
+<h4 id="requisição-20">Requisição</h4>
 
 <aside class="request"><span class="method put">PUT</span> <span class="endpoint">/1/RecurrentPayment/{RecurrentPaymentId}/NextPaymentDate</span></aside>
 
