[aa930850ed73dc13d7cdbfef3171abd52b9d5ca5]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -6363,7 +6363,7 @@ Abaixo especificamos qualquer diferença existente:</p>
   </tbody>
 </table>
 
-<h1 id="recorrencia">Recorrencia</h1>
+<h1 id="recorrência">Recorrência</h1>
 
 <p>Pagamentos recorrentes são transações de cartão de crédito que devem se repetir após um determinado periodo de tempo.</p>
 
