[a81a26a9237af526399e1c13ac724d811f466f6f]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -525,7 +525,7 @@
 
 <p>A Cielo oferece coleções completas de suas integrações via Postamn, o que facilita o processo de integração com a API Cielo.</p>
 
-<p>Sugerimos que desenvolvedores acessem nosso <a href="https://developercielo.github.io/Tutorial//Postman"><strong>Tutorial</strong></a> sobre a ferramenta para compreender melhor todas as vantagens que ela oferece.</p>
+<p>Sugerimos que desenvolvedores acessem nosso <a href="https://developercielo.github.io/tutorial/postman"><strong>Tutorial</strong></a> sobre a ferramenta para compreender melhor todas as vantagens que ela oferece.</p>
 
 <h2 id="cartão-de-crédito---sandbox">Cartão de crédito - Sandbox</h2>
 
