[1c85403ae121c144c55279265516aca834a01b85]: Updated '_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md' via CloudCannon

--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -320,6 +320,56 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 
 <p><img src="https://developercielo.github.io/images/pcode2.png" alt="" /></p>
 
+<h1 id="collections-e-environments--cielo-1">Collections e Environments  Cielo</h1>
+
+<p>Abaixo, listamos as collections e os Environments Cielo. Use-as em seu Postman para realizar testes e integrações.</p>
+
+<h3 id="api-cielo-ecommerce-1">Api Cielo Ecommerce</h3>
+
+<ul>
+  <li><strong>Collection</strong> -</li>
+</ul>
+
+<table>
+  <thead>
+    <tr>
+      <th>Ambiente</th>
+      <th>URLs</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Sandbox</td>
+      <td><strong>Envio de transação</strong>:  https://apisandbox.cieloecommerce.cielo.com.br <br /> <strong>Consulta transação</strong>: https://apiquerysandbox.cieloecommerce.cielo.com.br/</td>
+    </tr>
+    <tr>
+      <td>Produção</td>
+      <td><strong>Envio de transação</strong>: https://api.cieloecommerce.cielo.com.br/ <br /> <strong>Consulta transação</strong>: https://apiquery.cieloecommerce.cielo.com.br/</td>
+    </tr>
+  </tbody>
+</table>
+
+<h3 id="checkout-cielo-1">Checkout Cielo</h3>
+
+<ul>
+  <li><strong>Collection</strong>  -</li>
+</ul>
+
+<table>
+  <thead>
+    <tr>
+      <th>Ambiente</th>
+      <th>URLs</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Produção</td>
+      <td><strong>Envio de transação</strong>: https://cieloecommerce.cielo.com.br/api</td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
 
 
