[7ae81f3476ebe9fd80e46426ebcadc82f6bf360e]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3803,7 +3803,7 @@ O método recebe como parâmetro o <code class="highlighter-rouge">bitmap</code>
 
 <ol>
   <li>Acesse e faça o seu login no Dev Console através do <a href="https://www.cieloliostore.com.br">link</a></li>
-  <li>Na aba <strong>Apps públicos</strong> selecione o Ap desejado</li>
+  <li>Na aba <strong>Apps públicos</strong> selecione o App desejado</li>
   <li>Clique na aba <strong>API Token</strong> e depois no botão <strong>Gerar Token</strong></li>
   <li>Uma vez o token gerado, copie e guarde o mesmo.</li>
 </ol>
