[89c1dde524c82e21af966d357066d969f93b728f]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2992,6 +2992,11 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
       <td><code class="highlighter-rouge">Long</code></td>
     </tr>
     <tr>
+      <td>email</td>
+      <td>Email informado</td>
+      <td><code class="highlighter-rouge">String</code></td>
+    </tr>
+    <tr>
       <td>paymentListener</td>
       <td>Callback de pagamento</td>
       <td><code class="highlighter-rouge">cielo.sdk.order.payment.PaymentListener</code></td>
