[8916f914a37d8d1d9db26461927f82951a458801]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2954,7 +2954,7 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 
 <h3 id="5-pagamento-informando-email">5. Pagamento informando email</h3>
 
-<p>Exatamente como o método anterior, com a diferença que neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente. Caso queira utilizar essa função para realizar outro tipo de pagamento que não o parcelado, basta informar os códigos primários desejados e informar <strong>0</strong> no número de parcelas.
+<p>Exatamente como o método anterior, com a diferença que neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente.
 Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:</p>
 
 <table>
