[6e9fccf9655ff12a63ccb30bcfa73760d21a664a]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2961,7 +2961,7 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 <span class="n">String</span> <span class="n">primaryCode</span> <span class="o">=</span> <span class="n">primaryProduct</span><span class="o">.</span><span class="na">getCode</span><span class="o">();</span>
 <span class="n">String</span> <span class="n">secondaryCode</span> <span class="o">=</span> <span class="n">secondaryProduct</span><span class="o">.</span><span class="na">getCode</span><span class="o">();</span>
 
-<span class="n">orderManager</span><span class="o">.</span><span class="na">checkoutOrder</span><span class="o">(</span><span class="n">orderId</span><span class="o">,</span> <span class="n">primaryCode</span><span class="o">,</span> <span class="n">secondaryCode</span> <span class="n">paymentListener</span><span class="o">);</span>
+<span class="n">orderManager</span><span class="o">.</span><span class="na">checkoutOrder</span><span class="o">(</span><span class="n">orderId</span><span class="o">,</span> <span class="n">primaryCode</span><span class="o">,</span> <span class="n">secondaryCode</span><span class="o">,</span> <span class="n">paymentListener</span><span class="o">);</span>
 
 </code></pre></div></div>
 
