[655881635b38e44c2fcf53fe77224c5b69569d7f]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -220,8 +220,12 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 <p>Para realizar a importação basta:</p>
 
 <ol>
-  <li>Acessar a área do manual onde o link da Coleção está disponível e copia-lo
-  a. IMPORTANTE: para que a sua coleção sempre esteja atualizada, sugerimos que sempre busque a ultima versão da coleção no manual. O link NÃO ATUALIZA A COLEÇÃO IMPORTADA AUTOMATICAMENTE</li>
+  <li>Acessar a <a href="https://developercielo.github.io/tutorial/postman#collections-e-environments-cielo5">área deste tutorial</a> onde o link da Coleção está disponível e copiá-lo</li>
+</ol>
+
+<p><strong>*IMPORTANTE:</strong> para que a sua coleção sempre esteja atualizada, sugerimos que sempre busque a ultima versão da coleção no manual. O link NÃO ATUALIZA A COLEÇÃO IMPORTADA AUTOMATICAMENTE</p>
+
+<ol>
   <li>Com o Postman aberto, use o botão IMPORT, e selecione a opção “IMPORT FROM LINK”.</li>
 </ol>
 
