--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -267,6 +267,13 @@ A página de pagamentos Cielo proporciona um alto nível de confiança, seguindo
       <td>Não</td>
       <td>Não</td>
     </tr>
+    <tr>
+      <td>Hipercard</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Não</td>
+      <td>Não</td>
+    </tr>
   </tbody>
 </table>
 
@@ -2561,6 +2568,81 @@ Abaixo são descritos todos os campos retornados, assim como suas definições e
       <td>Boolean</td>
       <td>32</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">product_id</code></td>
+      <td>Identificador do Botão/Link de pagamento que gerou a transação</td>
+      <td>Alfanumérico</td>
+      <td>32</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">product_type</code></td>
+      <td>Tipo de Botão que gerou o pedido (Ver tabela de ProductID)</td>
+      <td>Alfanumérico</td>
+      <td>32</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">product_sku</code></td>
+      <td>Identificador do produto cadastro no link de pagamento</td>
+      <td>texto</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">product_max_number_of_installments</code></td>
+      <td>Numero de parcelas liberado pelo lojistas para o link de pagamento</td>
+      <td>Numérico</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">product_expiration_date</code></td>
+      <td>Data de validade do botão/Link de pagamento</td>
+      <td>Alfanumérico</td>
+      <td>12</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">product_quantity</code></td>
+      <td>Numero de transações restantes até que o link deixe de funcionar</td>
+      <td>Alfanumérico</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">product_description</code></td>
+      <td>Descrição do link de pagamentos registrada pelo lojista</td>
+      <td>texto</td>
+      <td>256</td>
+    </tr>
+  </tbody>
+</table>
+
+<p><strong>Tipos de productID</strong></p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Tipo de Link de pagamento</th>
+      <th>Enun</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Material físico</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>Digital</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>Serviço</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>Pagamento</td>
+      <td>4</td>
+    </tr>
+    <tr>
+      <td>Recorrência</td>
+      <td>5</td>
+    </tr>
   </tbody>
 </table>
 
@@ -2774,6 +2856,14 @@ Abaixo são descritos todos os campos retornados, assim como suas definições e
     <tr>
       <td>7</td>
       <td>JCB</td>
+    </tr>
+    <tr>
+      <td>8</td>
+      <td>Discover</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>Hipercard</td>
     </tr>
   </tbody>
 </table>
