[157dc0632be4a67a7389009d85b59924f18c4fb1]: Updated '_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md' via CloudCannon

--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -331,14 +331,14 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 <h3 id="api-cielo-ecommerce-1">Api Cielo Ecommerce</h3>
 
 <ul>
-  <li><strong>Collection</strong> -</li>
+  <li><strong>Collection</strong> -  https://www.getpostman.com/collections/139520c8fe2210654d7c</li>
 </ul>
 
 <table>
   <thead>
     <tr>
       <th>Ambiente</th>
-      <th>URLs</th>
+      <th>Endpoints</th>
     </tr>
   </thead>
   <tbody>
@@ -356,14 +356,14 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 <h3 id="checkout-cielo-1">Checkout Cielo</h3>
 
 <ul>
-  <li><strong>Collection</strong>  -</li>
+  <li><strong>Collection</strong>  - https://www.getpostman.com/collections/97969ec643738aac42f4</li>
 </ul>
 
 <table>
   <thead>
     <tr>
       <th>Ambiente</th>
-      <th>URLs</th>
+      <th>Endpoints</th>
     </tr>
   </thead>
   <tbody>
