--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -195,32 +195,134 @@ Acesse Documentação da Integração Local</li>
 <h2 id="especificações-técnicas-do-hardware-da-cielo-lio">Especificações técnicas do hardware da Cielo LIO</h2>
 
 <p>A plataforma Cielo LIO teve seu sistema operacional próprio baseado em Android.
-Confira abaixo a tabela com as especificações técnicas da Cielo LIO:
-| | <img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v1_small.png" alt="LIO V1" /> | <img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v2_small.png" alt="LIO V2" /> |
-|———————-|———————————————|———————————————|
-| Versão               | <strong>LIO V1</strong>                                  | <strong>LIO V2</strong>                                  |
-| Sistema operacional  | Android OS Cielo 5.1.1                      | Android OS Cielo 6.0 (Marshmallow)          |
-| Memória              | 2GB LPDDR3                                  | 1GB LPDDR3                                  |
-| Dual Chip            | Dual SIM Stand-by                           | -                                           |
-| Tipo do SIM Card     | micro SIM (3FF)                             | micro SIM (3FF)                             |
-| Frequência GSM Mhz   | Quad-Band 850/900/1800/1900                 | Quad-Band 850/900/1800/1900                 |
-| Tamanho em polegadas | 5”                                          | 5.5”                                        |
-| Tipo de tela         | AMOLED                                      | AMOLED                                      |
-| Resolução da tela    | 720 x 1280 pixels                           | 720 x 1280 pixels                           |
-| Densidade de pixels  | 293 ppi                                     | 267 ppi                                     |
-| Câmera               | 12.8 Mega Pixels                            | 13 Mega Pixels                              |
-| Resolução da câmera  | 4128 x 3096 pixels                          | 4160 x 3120 pixels                          |
-| Flash                | Flash LED                                   | Flash LED                                   |
-| USB                  | USB 2.0 Micro-B (Micro-USB) Somente Energia | USB 2.0 Micro-B (Micro-USB) Somente Energia |
-| Bluetooth            | Versão 4.0 com A2DP                         | Versão 4.0 com A2DP/LE                      |
-| WiFi                 | 802.11 a/b/g/n                              | 802.11 b/g/n                                |
-| GPS                  | A-GPS. GeoTagging                           | A-GPS                                       |
-| Sensores             | Acelerômetro, Proximidade e Luminosidade    | Acelerômetro, Proximidade e Luminosidade    |
-| Saída de áudio       | Audio Jack 3.5mm                            | Audio Jack 3.5mm                            |
-| Peso                 | 363 g                                       | 507 g                                       |
-| Altura               | 34mm                                        | 46mm                                        |
-| Largura              | 84mm                                        | 81mm                                        |
-| Comprimento          | 168mm                                       | 228mm                                       |</p>
+Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
+
+<table>
+  <thead>
+    <tr>
+      <th> </th>
+      <th><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v1_small.png" alt="LIO V1" /></th>
+      <th><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v2_small.png" alt="LIO V2" /></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Versão</td>
+      <td><strong>LIO V1</strong></td>
+      <td><strong>LIO V2</strong></td>
+    </tr>
+    <tr>
+      <td>Sistema operacional</td>
+      <td>Android OS Cielo 5.1.1</td>
+      <td>Android OS Cielo 6.0 (Marshmallow)</td>
+    </tr>
+    <tr>
+      <td>Memória</td>
+      <td>2GB LPDDR3</td>
+      <td>1GB LPDDR3</td>
+    </tr>
+    <tr>
+      <td>Dual Chip</td>
+      <td>Dual SIM Stand-by</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>Tipo do SIM Card</td>
+      <td>micro SIM (3FF)</td>
+      <td>micro SIM (3FF)</td>
+    </tr>
+    <tr>
+      <td>Frequência GSM Mhz</td>
+      <td>Quad-Band 850/900/1800/1900</td>
+      <td>Quad-Band 850/900/1800/1900</td>
+    </tr>
+    <tr>
+      <td>Tamanho em polegadas</td>
+      <td>5”</td>
+      <td>5.5”</td>
+    </tr>
+    <tr>
+      <td>Tipo de tela</td>
+      <td>AMOLED</td>
+      <td>AMOLED</td>
+    </tr>
+    <tr>
+      <td>Resolução da tela</td>
+      <td>720 x 1280 pixels</td>
+      <td>720 x 1280 pixels</td>
+    </tr>
+    <tr>
+      <td>Densidade de pixels</td>
+      <td>293 ppi</td>
+      <td>267 ppi</td>
+    </tr>
+    <tr>
+      <td>Câmera</td>
+      <td>12.8 Mega Pixels</td>
+      <td>13 Mega Pixels</td>
+    </tr>
+    <tr>
+      <td>Resolução da câmera</td>
+      <td>4128 x 3096 pixels</td>
+      <td>4160 x 3120 pixels</td>
+    </tr>
+    <tr>
+      <td>Flash</td>
+      <td>Flash LED</td>
+      <td>Flash LED</td>
+    </tr>
+    <tr>
+      <td>USB</td>
+      <td>USB 2.0 Micro-B (Micro-USB) Somente Energia</td>
+      <td>USB 2.0 Micro-B (Micro-USB) Somente Energia</td>
+    </tr>
+    <tr>
+      <td>Bluetooth</td>
+      <td>Versão 4.0 com A2DP</td>
+      <td>Versão 4.0 com A2DP/LE</td>
+    </tr>
+    <tr>
+      <td>WiFi</td>
+      <td>802.11 a/b/g/n</td>
+      <td>802.11 b/g/n</td>
+    </tr>
+    <tr>
+      <td>GPS</td>
+      <td>A-GPS. GeoTagging</td>
+      <td>A-GPS</td>
+    </tr>
+    <tr>
+      <td>Sensores</td>
+      <td>Acelerômetro, Proximidade e Luminosidade</td>
+      <td>Acelerômetro, Proximidade e Luminosidade</td>
+    </tr>
+    <tr>
+      <td>Saída de áudio</td>
+      <td>Audio Jack 3.5mm</td>
+      <td>Audio Jack 3.5mm</td>
+    </tr>
+    <tr>
+      <td>Peso</td>
+      <td>363 g</td>
+      <td>507 g</td>
+    </tr>
+    <tr>
+      <td>Altura</td>
+      <td>34mm</td>
+      <td>46mm</td>
+    </tr>
+    <tr>
+      <td>Largura</td>
+      <td>84mm</td>
+      <td>81mm</td>
+    </tr>
+    <tr>
+      <td>Comprimento</td>
+      <td>168mm</td>
+      <td>228mm</td>
+    </tr>
+  </tbody>
+</table>
 
 <h2 id="rotação-de-tela-na-cielo-lio">Rotação de tela na Cielo LIO</h2>
 
